<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Main.HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/help" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:text="@string/help"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/eet_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/et_bg_stroke"
                        android:fontFamily="@font/poppins"
                        android:foreground="?attr/selectableItemBackground"
                        android:hint="@string/your_name"
                        android:inputType="textCapSentences"
                        android:maxLength="50"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/eet_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/et_bg_stroke"
                        android:fontFamily="@font/poppins"
                        android:foreground="?attr/selectableItemBackground"
                        android:hint="@string/your_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/et_problem"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/et_bg_stroke"
                        android:fontFamily="@font/poppins"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="start"
                        android:hint="@string/problem"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="250"
                        android:padding="10dp"
                        android:paddingHorizontal="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="32dp"
                        app:cardBackgroundColor="@color/purple_500"
                        app:cardCornerRadius="30dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_send"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/purple_500"
                            android:foreground="?attr/selectableItemBackground"
                            android:minHeight="35dp"
                            android:paddingHorizontal="50dp"
                            android:text="@string/send"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="50dp"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/cv_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/we_are_available_on"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/view9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:drawableStart="@drawable/ic_globe"
                    android:drawablePadding="15dp"
                    android:text="www.BookAndBooks.com"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="15dp"
                    android:drawableStart="@drawable/ic_gmail"
                    android:drawablePadding="15dp"
                    android:text="bookandbooks07@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>